src/test/resources/invalid/semanticErr/extra/clob.wacc
begin

int giveMeNumber(int x, char c, pair(pair, int) p) is
    c = c + 1;
    int k = (x + (1 + (2 + (3 + (5 + (7 + (11 + (13 + (17 + true)))))))));
    pair(char, char) p1 = fst p;
    char c = snd p1;
    while x < (2 + c) do
        if (k - 1) > x * 4 || true then
            c = c + 1;
            snd p = k
        else
            fst p = newpair('k', 1)
        fi;
        if a then return k else return k + 2 fi
    done;
    return c
end

char some() is
    int[] arr = [1, 2, 3];
    char c = arr[1][0];
    return c
end

int somemore(int[] a) is
    int[] arr = [2, 4, 5, 6, 'c'];
    int y = arr[true];
    int x = arr[1][arr[0]];
    return y
end

char c = call some(1);
bool k = call giveMeNumber(1,4,5,6,7,8,9,10);
int[][][] bigarr = [1,2,3];
pair(int, char)p = newpair('c', 1);
int num = call giveMeNumber(1, 'k', null);
exit(num)

end